err/products.brfieldsandwidgets.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/Extensions'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/content'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/locales'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/locales/pt_BR'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/profiles'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/profiles/default'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/profiles/example'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/profiles/example/types'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/profiles/uninstall'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_images'...
Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_templates'...
Compiling './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_templates/lstDDD.py'...
***   File "./lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_templates/lstDDD.py", line 85
    return lstReturn + lstTupCodArea
                                   ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_templates/phoneFormat.py'...
***   File "./lib/python3.5/site-packages/Products/BrFieldsAndWidgets/skins/BrF_templates/phoneFormat.py", line 15
    return tmpReturn
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/tests'...
Compiling './lib/python3.5/site-packages/Products/BrFieldsAndWidgets/validators.py'...
***   File "./lib/python3.5/site-packages/Products/BrFieldsAndWidgets/validators.py", line 52
    R = sum(map(lambda(i, v): (len(ltmp)+1-i)*v,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.BrFieldsAndWidgets-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/brasil'...
Listing './lib/python3.5/site-packages/brasil/vocab'...
Listing './lib/python3.5/site-packages/brasil/vocab/geo'...
Listing './lib/python3.5/site-packages/brasil/vocab/telecom'...
Listing './lib/python3.5/site-packages/brasil/vocab/tests'...
Listing './lib/python3.5/site-packages/brasil.vocab-0.8.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/brasil'...
Listing './lib/python3.5/site-packages/collective/brasil/vocab'...
Listing './lib/python3.5/site-packages/collective/brasil/vocab/docs'...
Listing './lib/python3.5/site-packages/collective/brasil/vocab/geo'...
Listing './lib/python3.5/site-packages/collective/brasil/vocab/telecom'...
Listing './lib/python3.5/site-packages/collective/brasil/vocab/tests'...
Listing './lib/python3.5/site-packages/collective.brasil.vocab-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
